<resources>
    <string name="app_name">Admin</string>
    <string name="home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_admin_account">Create Admin Account</string>
    <string name="pincode">Pincode</string>
    <string name="create_admin">Create Admin</string>
    <string name="user_name">User Name</string>
    <string name="contact">Contact</string>
    <string name="outlet_name">Outlet Name</string>
    <string name="address">Address</string>
    <string name="admin_verification_code">Admin Verification Code</string>
</resources>
