<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/window_background"
        android:padding="16dp"
        tools:context=".ui.fragments.AddAdminFragment">

    <TextView
            android:id="@+id/frag_user_title_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/create_admin_account"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/colorAccent"/>

    <ScrollView
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_below="@+id/frag_user_title_id"
            android:layout_above="@+id/frag_user_add_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/frag_user_name_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_name"
                        android:inputType="textCapWords|textPersonName|textNoSuggestions"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/frag_user_mobile_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="10"
                        android:hint="@string/contact"
                        android:inputType="phone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <AutoCompleteTextView
                        android:id="@+id/frag_user_outlet_name_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/outlet_name"
                        android:inputType="textCapWords|textPersonName|textNoSuggestions"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:id="@+id/frag_user_zipcode_id"
                        android:hint="@string/pincode"
                        android:layout_weight="8"
                        android:layout_width="0dp"
                        android:inputType="number"
                        android:layout_height="wrap_content"/>
                <ImageView
                        android:id="@+id/frag_search_zipcode_id"
                        android:layout_weight="2"
                        android:src="@android:drawable/ic_search_category_default"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <AutoCompleteTextView
                        android:id="@+id/frag_user_address_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address"
                        android:inputType="textCapWords|textPersonName|textNoSuggestions"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/frag_user_admin_code_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="6"
                        android:hint="@string/admin_verification_code"
                        android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <Button
            android:id="@+id/frag_user_add_btn"
            android:text="@string/create_admin"
            android:layout_alignParentBottom="true"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</RelativeLayout>